adding delete,and edit service calls
