# app/BetService.py
@@ -2,7 +2,7 @@ import requests
 from app import db
 
 from app.models import Bet
-
+from sqlalchemy import update
 
 
 class Betservice(object):
@@ -16,3 +16,15 @@ class Betservice(object):
         db.session.add(u)
         db.session.commit()
         return 200
+
+    def editBet(self, bet: Bet,bet_id):
+        res = {k: v for k, v in bet.as_dict().items() if v is not None}
+        db.session.query(Bet).filter_by(id=bet_id).update(res)
+        db.session.commit()
+        return 200
+
+    def deleteBet (self, bet_id):
+        db.session.query(Bet).filter_by(id=bet_id).delete()
+        db.session.commit()
+        return 200
+
