# app/TeamService.py
@@ -15,3 +15,14 @@ class TeamService(object):
         db.session.add(t)
         db.session.commit()
         return 200
+
+    def editFixture(self, team: Team,team_id):
+        res = {k: v for k, v in team.as_dict().items() if v is not None}
+        db.session.query(Team).filter_by(id=team_id).update(res)
+        db.session.commit()
+        return 200
+
+    def deleteTeam (self, team_id):
+        db.session.query(Team).filter_by(id=team_id).delete()
+        db.session.commit()
+        return 200
